Style fixes for Ui.ColorPanel
- Make sure handles are not overlapping
- Fix a bug where box-shadow are not visible

--- a/stylesheets/ui/components/ui-color-panel.scss
+++ b/stylesheets/ui/components/ui-color-panel.scss
@@ -64,14 +64,23 @@ ui-color-panel {
   ui-color-panel-hue,
   ui-color-panel-rect,
   ui-color-panel-alpha {
+    position: relative;
+  }
+
+  ui-color-panel-hue, {
+    box-shadow: 0 0 1px 1px rgba(#000, 0.4) inset;
+    border-radius: $border-radius;
+  }
+
+  ui-color-panel-rect,
+  ui-color-panel-alpha > div {
     box-shadow: 0 0 1px 1px rgba(#000, 0.2) inset;
     border-radius: $border-radius;
-    position: relative;
   }
 
   // Rect + Hue container
   > div {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     display: flex;
     flex: 1;
 
@@ -93,7 +102,7 @@ ui-color-panel {
     ui-color-panel-rect {
       background-image: linear-gradient(0deg, #000 0%, transparent 100%),
                         linear-gradient(90deg, #FFF 0%, rgba(#FFF, 0) 100%);
-      margin-right: 10px;
+      margin-right: 15px;
       flex: 1;
     }
   }
